# ferry

./: .gitignore  README.md  components.json  package.json  pnpm-lock.yaml  pubspec.yaml  vite.config.ts
.github/workflows/: release.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: chat.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: chat_state.rs  frb_generated.rs  lib.rs  transport.rs
rust/src/api/: chat.rs  mod.rs  simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_ferry.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_ferry.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: bump-version.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: chat.rs  lib.rs  main.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
