[package]
name = "rust_lib_ferry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
libchat = { git = "https://github.com/logos-messaging/libchat", rev = "df84fc87cf3019f2f4621109719b9674565ce891" }
mdns-sd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
