[package]
name = "ferry"
version = "0.1.6"
description = "Ferry chat"
authors = ["Kaichao"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ferry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
ctrlc = { version = "3", features = ["termination"] }
logos-chat = { git = "https://github.com/logos-messaging/libchat", rev = "e60bdfeb5c520b651c7f3d0ff65acf9af0d186ff" }
